--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "start": "vue-cli-service serve --open",
-    "deploy": "gh-pages -d src"
+    "deploy": "gh-pages -d dist"
   },
   "homepage": "https://miguelaugusto87.github.io/RestaurantMenuApp",
   "dependencies": {
