--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue": "^2.6.11",
     "vue-breakpoint-component": "^1.2.6",
     "vue-i18n": "^8.21.1",
+    "vue-js-modal": "^2.0.0-rc.6",
     "vue-qrcode-reader": "^2.3.13",
     "vue-router": "^3.2.0",
     "vuex": "^3.5.1"
