--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "libphonenumber-js": "^1.7.57",
     "moment": "^2.28.0",
     "qrcode.vue": "^1.7.0",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2",
     "vue": "^2.6.11",
     "vue-breakpoint-component": "^1.2.6",
+    "vue-goodshare": "^1.5.1",
     "vue-i18n": "^8.21.1",
     "vue-js-modal": "^2.0.0-rc.6",
     "vue-qrcode-reader": "^2.3.13",
