--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sass-loader": "^10.0.2",
     "vue": "^2.6.11",
     "vue-breakpoint-component": "^1.2.6",
+    "vue-color": "^2.7.1",
     "vue-goodshare": "^1.5.1",
     "vue-i18n": "^8.21.1",
     "vue-js-modal": "^2.0.0-rc.6",
